# predikt_assignment

./: README.md
energy-chart/: README.md  pyproject.toml  requirements.txt
energy-chart/data/: monthly_avg_spot_prices_Belgium.csv  monthly_avg_spot_prices_Belgium.json  monthly_avg_spot_prices_Belgium.parquet  monthly_avg_spot_prices_France.csv  monthly_avg_spot_prices_France.json  monthly_avg_spot_prices_France.parquet  monthly_avg_spot_prices_Germany.csv  monthly_avg_spot_prices_Germany.json  monthly_avg_spot_prices_Germany.parquet  spot_prices_Belgium.csv  spot_prices_Belgium.parquet  spot_prices_France.csv  spot_prices_France.parquet  spot_prices_Germany.csv  spot_prices_Germany.json  spot_prices_Germany.parquet
energy-chart/src/: config.py  ingestion.py  main.py  storage.py  transform.py
market-watch/: README.md  main.py  pyproject.toml  requirements.txt
market-watch/marketwatch_futures/: futures_list.csv  futures_list.parquet
market-watch/marketwatch_futures_details/: futures_details.csv  futures_details.parquet
market-watch/src/: fetch_future_details.py  fetch_futures_list.py
