[tool.poetry]
name = "energy-charts-ingestion"
version = "0.1.0"
description = "A ingestion for historical energy spot prices"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
polars = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
